--- a/cal.html
+++ b/cal.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="cal.css">
 </head>
 <body>
-    
+   <section>
+    <div class="container">
+         <div class="heading"><p>CALCULATOR</p></div>
+         
+        <div class="display">
+            <div class="display-1"></div>
+           <div class="display-2">0</div>
+            <div class="temp-result"></div>
+        </div>
+        <div class="all_buttons">
+            <div class=" button all-clear">AC</div>
+            <div class="button toggleSign">+/-</div>
+            <div class="button operation">%</div>
+            <div class="button operation bg">/</div>
+            <div class="button number">7</div>
+            <div class="button number">8</div>
+            <div class="button number">9</div>
+            <div class="button operation bg">*</div>
+            <div class="button number">4</div>
+            <div class="button number">5</div>
+            <div class="button number">6</div>
+            <div class="button operation bg">-</div>
+            <div class="button number">1</div>
+            <div class="button number">2</div>
+            <div class="button number">3</div>
+            <div class="button operation bg">+</div>
+            <div class="button number btn-0 ">0</div>
+            <div class="button number dot">.</div>
+            <div class="button equal bg">=</div>
+        </div> 
+    </div>
+   </section> 
+   <script src="cal.js"></script>
 </body>
 </html>
